[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/TrelloReporting/Trello_Reporting_Tool.gd" type="Script" id=1]
[ext_resource path="res://Resources/Theme/TitleTheme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Fonts/Font20.tres" type="FontFile" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 19.0
content_margin_right = 15.0
content_margin_top = 12.0
content_margin_bottom = 8.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventJoypadButton" id=2]
button_index = 1

[sub_resource type="Shortcut" id=3]
shortcut = SubResource( 2 )

[node name="Trello_Reporting_Tool" type="PanelContainer"]
process_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -822.0
offset_top = -409.0
offset_right = 822.0
offset_bottom = 409.0
custom_minimum_size = Vector2( 300, 260 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1634.0
offset_bottom = 808.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1624.0
offset_bottom = 95.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
offset_right = 1533.0
offset_bottom = 95.0
text = "Lumencraft Bug Reporting Tool"
align = 1

[node name="Cancel2" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 1537.0
offset_right = 1624.0
offset_bottom = 95.0
size_flags_horizontal = 10
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/normal = SubResource( 1 )
shortcut = SubResource( 3 )
text = "X"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 95.0
offset_right = 1624.0
offset_bottom = 99.0

[node name="Spacer" type="Control" parent="VBoxContainer"]
offset_top = 99.0
offset_right = 1624.0
offset_bottom = 109.0
custom_minimum_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 109.0
offset_right = 1624.0
offset_bottom = 798.0
theme_override_constants/separation = 0

[node name="ShortDescLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_right = 1624.0
offset_bottom = 95.0
size_flags_horizontal = 3
text = "Title"

[node name="ShortDescEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
offset_top = 95.0
offset_right = 1624.0
offset_bottom = 166.0
caret_blink = true

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
offset_top = 166.0
offset_right = 1624.0
offset_bottom = 176.0
custom_minimum_size = Vector2( 0, 10 )

[node name="LongDescLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_top = 176.0
offset_right = 1624.0
offset_bottom = 271.0
text = "Description"

[node name="LongDescEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
offset_top = 271.0
offset_right = 1624.0
offset_bottom = 471.0
custom_minimum_size = Vector2( 0, 200 )
size_flags_vertical = 3
wrap_enabled = true

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
offset_top = 471.0
offset_right = 1624.0
offset_bottom = 491.0
custom_minimum_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_top = 491.0
offset_right = 1624.0
offset_bottom = 580.0

[node name="TakeScreenshot" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
offset_right = 821.0
offset_bottom = 89.0
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/normal = SubResource( 1 )
text = "Take Screenshot"

[node name="Screenshot" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
offset_left = 825.0
offset_right = 1624.0
offset_bottom = 89.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer"]
offset_top = 580.0
offset_right = 1624.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 0, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_top = 600.0
offset_right = 1624.0
offset_bottom = 689.0

[node name="Feedback" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
offset_right = 1624.0
offset_bottom = 62.0
custom_minimum_size = Vector2( 0, 62 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 3 )
text = "report"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custom" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_right = 1624.0
offset_bottom = 89.0

[node name="Type" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/Custom"]
unique_name_in_owner = true
offset_right = 810.0
offset_bottom = 89.0
custom_minimum_size = Vector2( 550, 0 )
size_flags_horizontal = 3
pressed = true
align = 1

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Custom"]
unique_name_in_owner = true
visible = false
offset_right = 191.0
offset_bottom = 55.0
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/normal = SubResource( 1 )
text = "Cancel"

[node name="Send" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Custom"]
unique_name_in_owner = true
offset_left = 814.0
offset_right = 1624.0
offset_bottom = 89.0
size_flags_horizontal = 3
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/normal = SubResource( 1 )
disabled = true
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel2" to="." method="exit"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/ShortDescEdit" to="." method="_on_ShortDescEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LongDescEdit" to="." method="_on_LongDescEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/TakeScreenshot" to="." method="take_screenshot"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Custom/Cancel" to="." method="exit"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Custom/Send" to="." method="_on_Send_pressed"]
[connection signal="timeout" from="Timer" to="." method="take_snapshot"]
